# TTRPG_Comic_Generator

./: .gitignore  GUI_DESIGN.md  GUI_ROADMAP.md  Plan.md  README.md  TODO.md  VirtualBoxSetup.md  jargon.md  pyproject.toml  requirements.txt
prompts/: art_direction_template.json  master_beater.txt  master_beater_system.txt  page_prompt.txt  scriptwriter_system.txt  scriptwriter_user.txt  story_architect_system.txt  story_architect_user.txt  style_integrator_system.txt  style_integrator_user.txt
src/: analyzer.py  app_paths.py  entities.py  gui.py  llm_client.py  main.py  master_beater.py  model_defaults.py  pipeline.py  pipeline_config.py  pipeline_events.py  prompt_saver.py  prompt_templates.py  prompter.py  repository_service.py  run_controller.py  scraper.py  scriptwriter.py  settings_service.py  story_architect.py  style_integrator.py
src/prompts/: art_direction_template_blank.json  page_prompt.txt  scriptwriter_system.txt  style_integrator_user.txt
tests/: test_analyzer.py  test_app_paths.py  test_entities.py  test_gui_integration.py  test_master_beater.py  test_pipeline.py  test_prompter.py  test_repository_service.py  test_run_controller.py  test_run_page.py  test_scraper.py  test_scriptwriter.py  test_settings_service.py  test_story_architect.py  test_style_integrator.py
