[project]
name = "ttrpg-comic-generator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flet==0.85.1",
    "playwright",
    "pydantic",
    "instructor",
    "ollama",
    "openai",
    "keyring",
]

[tool.flet]
product = "TTRPG Comic Generator"

[tool.flet.app]
path = "src"
module = "main"
